Adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -13,6 +13,9 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure perspiciatis nihil odio veritatis laboriosam, quia
         ratione dignissimos. Consequuntur ex molestiae aliquam, perspiciatis in sint doloremque, ipsa, nobis tempora
         velit dolor!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati temporibus deleniti doloribus fuga? Nulla id
+        debitis asperiores cupiditate assumenda alias sunt cum quis voluptatibus, dignissimos labore ipsum laudantium
+        vitae laborum.</p>
 </body>
 
 </html>
